--- a/src/fitnesse/resources/templates/editPage.vm
+++ b/src/fitnesse/resources/templates/editPage.vm
@@ -119,6 +119,8 @@ $(function () {
         return "The page content has been changed.\nDo you really want to leave this page?";
       }
     };
+    
+    aceInit();
   }
 });
 </script>
